css/main.css
body {
  font-family: Arial, Helvetica, sans-serif;
  display: flex;
  flex-wrap: nowrap;
  flex-direction: column;
  color: #1B1717;
  font-size: 24px;
  margin: 0;
  padding: 0;
  background-color: #EEEBDD;
}

h1 {
  font-size: 48px;
  font-weight: extra-bold;
}

p {
  font-size: 20px;
}

button {
  width: 110px;
  background-color: #CE1212;
  color: #1B1717;
  padding: 10px;
  border-radius: 8px;
  border: none;
}

header {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
}

.container {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  justify-content: space-between;
  flex-direction: row;
  margin-left: 40px;
  margin-right: 40px;
}

.container img {
  display: flex;
  flex-wrap: wrap;
  align-self: center;
  margin-right: 20px;
  margin-bottom:auto;
  width: 450px;
  max-width:100%;
  min-width: 0;
  min-height: 0;
}

.sub {
  align-self: flex-start;
  max-width: 50%;
  margin-right: 15px;
  flex-wrap: wrap;
}

.sub a:hover {
  color: #810000;
}

ul > * + * { margin-left: 2rem;}

ul {
  list-style: none;
  display: flex;
  flex-wrap: nowrap;
  gap: 30px;
  color: #CE1212;
  font-size: 20px;
  flex: 1;
  align-self: center;
  justify-content: flex-end;
}

.top {
  padding-left: 15px;
  padding-right: 15px;
  background-color: #1B1717;
  color: #EEEBDD;
  flex: 1;
  flex-direction: row;
  padding-bottom: 40px;
  flex-wrap: wrap;
}

.middle {
  margin-top: 45px;
  background-color: #EEEBDD;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  flex-wrap: wrap;
}

.crew {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  flex-wrap: wrap;
  text-align: center;
}

.crew_images {
  width: 200px;
  height: 200px;
  object-fit: cover;
  border: 4px solid #CE1212;
  border-radius: 15%;
  margin: 5px 20px 5px 20px;
}

.quote {
  margin-top: 45px;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  align-items: center;
  background-color: #810000;
  font-family: sans-serif;
  font-style: italic;
  color: #EEEBDD;
  padding: 50px 0px;
}

.quote h3 {
  font-weight: lighter;
}

.bottom {
  display: flex;
  justify-content: center;
  background-color: #EEEBDD;
}

.signup {
  display: flex;
  flex-direction: row;
  align-items: center;
  border: solid #CE1212;
  background-color: #CE1212;
  border-radius: 10px;
  margin: 50px;
  padding: 10px;
  width: 700px;
}

.signup .text {
  display: flex;
  flex-direction: column;
}

.signup a:hover {
  color: #810000;
}

.join {
  border: 3px solid #EEEBDD;
  margin-left: auto;
}

.footer {
  margin-bottom: 0;
  background-color: #1B1717;
  color: #EEEBDD;
  text-align: center;
  font-size: 12px;
  padding: 20px;
}

a:link {
  color: #C8C6C6;
  text-decoration: none;
}

a:visited {
color: #C8C6C6;
}

a:hover {
  color: #CE1212;
}


.footer a {
  color: #CE1212;
}

.footer a:visited {
  color: #CE1212;
}


.footer a:hover {
  color: #C8C6C6;
}

